--- a/.classpath
+++ b/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/myroot/workspace-java/thirdparty/jedis-jedis-2.5.1-1.5.0.jar"/>
 	<classpathentry kind="lib" path="/myroot/workspace-java/thirdparty/commons-pool2-2.2.jar"/>
 	<classpathentry kind="lib" path="/myroot/workspace-java/thirdparty/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="/myroot/workspace-java/thirdparty/testng-6.8.jar"/>
 	<classpathentry kind="lib" path="/myroot/workspace-java/thirdparty/hamcrest-all-1.1.jar"/>
+	<classpathentry kind="lib" path="/myroot/workspace-java/thirdparty/jedis-2.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
